# capeify

./: MANIFEST.in  README.md  pyproject.toml
Capeify/: main.py
Capeify/scripts/: create_xml.py  read_inf.py
Capeify/scripts/ani/: convert2png.py  get_hotspot.py  get_size.py
Capeify/scripts/cur/: convert2png.py
Capeify/templates/: cape_template.cape
