[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "capeify"
version = "1.0.1"
dependencies = ["Wand","Pillow ==9.5.0","lxml","ani_file"]
description = "Win cursor package to .cape file converter"
readme = "README.md"
authors = [{name = "mmemoo"}]
requires-python = ">=3.12.0"

[project.scripts]
capeify = "Capeify.main:main"

[tool.setuptools]
include-package-data = true
